# Expedia.com

./: CMakeLists.txt  CustomerView.h  Expedia.com.cpp  ExpediaBackend.h  ExpediaFrontend.h  README.md  helpers.h  main.cpp
Characters/: Customer.h  PaymentCard.h  User.h
Flights/: AirCanadaFlight.h  Flight.h  FlightRequest.h  FlightsFactory.h  TurkishFlight.h
Hotels/: HiltonRoom.h  HotelRequest.h  HotelRoom.h  HotelsFactory.h  MarriottFoundRoom.h
Managers/: CustomerManager.h  IFlighsManager.h  IHotelsManager.h  UserManager.h
Reservation/: FlightReservation.h  HotelReservation.h  ItineraryReservation.h  Reservation.h  ReservationsSet.h
